// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step should match the snapshot 1`] = `
<styled.li>
  <Paragraph />
</styled.li>
`;

exports[`Step should match the snapshot when active 1`] = `
<styled.li
  isActive={true}
>
  <Paragraph />
</styled.li>
`;
